# kiteguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  install.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
config/: rules.yaml
console/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
console/src/: App.vue  style.css
console/src/api/: events.js
console/src/components/: EventsTable.vue  StatsBar.vue  ThreatChart.vue  Timeline.vue
docs/: book.toml  custom.css  theme-force.js
docs/src/: SUMMARY.md  introduction.md
docs/src/assets/: local-psd-file.psd
docs/src/configuration/: bash.md  file-paths.md  injection.md  pii.md  rules-yaml.md  urls.md  webhook.md
docs/src/detectors/: commands.md  injection.md  overview.md  paths.md  pii.md  secrets.md  urls.md
docs/src/getting-started/: how-it-works.md  installation.md  quickstart.md
docs/src/hooks/: overview.md  post-tool-use.md  pre-tool-use.md  stop.md  user-prompt-submit.md
docs/src/reference/: architecture.md  audit-log.md  cli.md  console.md  contributing.md
scripts/: install.sh  uninstall.sh
src/: crypto.rs  lib.rs  main.rs  util.rs
src/audit/: logger.rs  mod.rs  webhook.rs
src/cli/: audit.rs  explain.rs  init.rs  mod.rs  policy.rs  serve.rs  test_policy.rs
src/detectors/: commands.rs  injection.rs  mod.rs  paths.rs  pii.rs  secrets.rs  urls.rs
src/engine/: evaluator.rs  mod.rs  policy.rs  verdict.rs
src/hooks/: mod.rs  post_response.rs  post_tool.rs  pre_prompt.rs  pre_tool.rs
tests/: cli_tests.rs  evaluator_tests.rs
