[package]
name        = "kiteguard"
version     = "0.1.0"
edition     = "2021"
description = "Runtime security guardrails for Claude Code and AI coding agents"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/DhivakaranRavi/kiteguard"
homepage    = "https://kiteguard.dev"
keywords    = ["security", "claude", "ai-agents", "guardrails", "devsec"]
categories  = ["command-line-utilities", "development-tools"]
authors     = ["kiteguard contributors"]
readme      = "README.md"

[[bin]]
name = "kiteguard"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
regex       = "1"
anyhow      = "1"
chrono      = { version = "0.4", features = ["serde"] }
dirs        = "5"
ureq        = "2"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"

[profile.release]
opt-level   = 3
strip       = true      # strip debug symbols — smaller binary
lto         = true      # link-time optimization
codegen-units = 1
