[package]
name        = "kiteguard"
version     = "0.2.0"
edition     = "2021"
rust-version = "1.75"
description = "Open-source runtime security guardrails for Claude Code, Cursor, and Gemini CLI"
license     = "MIT"
repository  = "https://github.com/DhivakaranRavi/kiteguard"
homepage    = "https://dhivakaranravi.github.io/kiteguard"
keywords    = ["security", "guardrails", "ai-agents", "claude", "cursor", "Gemini CLI"]
categories  = ["command-line-utilities", "development-tools"]
authors     = ["Dhivakaran Ravi"]
readme      = "README.md"

[[bin]]
name = "kiteguard"
path = "src/main.rs"

[lib]
name = "kiteguard"
path = "src/lib.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
regex       = "1"
sha2        = "0.10"
hmac        = "0.12"
axum        = "0.8"
tokio       = { version = "1", features = ["rt", "macros", "net"] }
rust-embed  = "8"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"

[profile.release]
opt-level   = 3
strip       = true      # strip debug symbols — smaller binary
lto         = true      # link-time optimization
codegen-units = 1
